--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
             <P>Día: Viernes </P>
         </div>
     </Section>
+    <div>
+        <h3>Cuál tour querés hacer?</h3>
+        <form>
+            <label for="tour">Tour:</label>
+            <input type="text" name="tour">
+
+            <label for="Nombre">Nombre:</label>
+            <input type="text" name="Nombre">
+
+            <label for="Apellido">Apellido:</label>
+            <input type="text" name="Apellido">
+
+            <label for="mail">Mail:</label>
+            <input type="email" name="Mail">
+
+            <input type="submit" value="Enviar">
+
+
+        </form>
+    </div>
     <Div>
         <h3>Al final de cada tour te regalamos una:</h3>
         <img src="./assets/banana.jpg" alt="banana">
